--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
+<script>
+
+  var cores = ["red","blue","green","black","white"];
+
+  function gerarNumeroAleatorio() {
+    return Math.floor(Math.random() * 5);
+  }
+
+  function geraCoresAleatorias() {
+    return cores[gerarNumeroAleatorio()]
+  }
+  
+</script>
+
+
+
 <div align ='center'>
-<font color = blue>
+<font color="geraCoresAleatorias()">
 hello website
 
 <br>
