--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   function geraCoresAleatorias() {
     return cores[gerarNumeroAleatorio()]
   }
-  
+
+  console.log(geraCoresAleatorias());
 </script>
 
 
