--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   function geraCoresAleatorias() {
     var element = document.getElementsByTagName("font")
-    element.style("color=''+cores[gerarNumeroAleatorio()]+''")
- }
+    elemento.style.color = gerarNumeroAleatorio() 
+  }
 
 </script>
 
