--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   function geraCoresAleatorias() {
     var element = document.getElementsByTagName("font")
-    elemento.style.color = gerarNumeroAleatorio() 
+    element.style.color = gerarNumeroAleatorio() 
   }
 
 </script>
