--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   function geraCoresAleatorias() {
     var element = document.getElementsByTagName("font")
-    element.style.color = gerarNumeroAleatorio() 
+    element.style.color = ""+gerarNumeroAleatorio()+""; 
   }
 
 </script>
@@ -19,7 +19,7 @@
 
 <div align ='center'>
 <font>
-hello website 3
+hello website novo
 
 <br>
 
