--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   function geraCoresAleatorias() {
     var element = document.getElementsByTagName("font")
-    element.style.color = ""+gerarNumeroAleatorio()+""; 
+    element.style.color = ""+cores[gerarNumeroAleatorio()]+""; 
   }
 
 </script>
@@ -19,7 +19,7 @@
 
 <div align ='center'>
 <font>
-hello website novo
+hello website novo 2
 
 <br>
 
